--- a/css/content.css
+++ b/css/content.css
@@ -49,7 +49,7 @@ Gray: #595959;
 }
 .content main h2{
 	font-size: 1.9em;
-	color: #191716;
+	color: #2c293d;
 	line-height: 1.5em;
 	margin: .25em 0 .5em;
 }
