--- a/css/content.css
+++ b/css/content.css
@@ -6,8 +6,7 @@ Zoomcasts (red): #94433f;
 Green: #5c7d62;
 Yellow: #f2da87;
 Blue: #1457af;
-Light Blue: #b9d6fa;
-Gray: #595959;
+Gray: #4b4b46;
 */
 /* ----------------------- */
 .zoomcasts.content header{
