--- a/css/youtube.css
+++ b/css/youtube.css
@@ -5,7 +5,7 @@
 .wrapper{
 	margin: 1.5em auto;
 	padding: 0;
-	border: 1px solid #595959;
+	border: 1px solid #4b4b46;
 }
 @media only screen and (min-width: 480px){
 	.wrapper{
