--- a/css/carousel.css
+++ b/css/carousel.css
@@ -24,7 +24,7 @@
 	display: block;
 }
 .carousel .carousel-items{
-	border: solid 1px #595959;
+	border: solid 1px #4b4b46;
 }
 .carousel .carousel-items.focus{
 	border-color: #fff;
