--- a/css/cluster.css
+++ b/css/cluster.css
@@ -118,7 +118,7 @@
 }
 .cluster main section div:hover,
 .cluster main section div:focus-within{
-	outline: 3px solid #3D5A80;
+	outline: 3px solid #3C587C;
 }
 .cluster main section div img{
 	background: #EFECE6;
