--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ Black: #281519;
 Lighter Black: #322d29;
 Dark Blue: #3C587C;
 Lighter Blue: #577D9E;
-Light Blue: #0645AD;
+Light Blue: #0645AD; (carousel)
 Sky Blue: #98C1D9;
 Gray: #EFECE6;
 Darker Gray: #8c8c8c;
