--- a/css/content.css
+++ b/css/content.css
@@ -9,7 +9,7 @@
 	background: #ED6D5A;
 }
 .lesson-plans.content header{
-	background: #577D9E;
+	background: #537796;
 }
 /* ----------------------- */
 .content header{
@@ -44,7 +44,7 @@
 }
 .content main h2{
 	font-size: 1.9em;
-	color: #281519;
+	color: #261418;
 	line-height: 1.5em;
 	margin: .25em 0 .5em;
 }
