--- a/css/carousel.css
+++ b/css/carousel.css
@@ -79,9 +79,8 @@
 		max-height: calc(529px * .95);
 	}
 }
-/* Carousel caption (also regular images) */
-.carousel .carousel-item .carousel-caption,
-.image-caption{
+/* Carousel caption (also see image caption) */
+.carousel .carousel-item .carousel-caption{
 	text-align: center;
 	line-height: 1.2em;
 	padding: 0;
@@ -91,8 +90,7 @@
 	left: 0;
 }
 @media only screen and (min-width: 480px){
-	.carousel .carousel-item .carousel-caption,
-	.image-caption{
+	.carousel .carousel-item .carousel-caption{
 		line-height: 1.6em;
 		bottom: .5em;
 	}
@@ -104,8 +102,7 @@
 		left: unset;
 	}
 }
-.carousel .carousel-item .carousel-caption p,
-.image-caption p{
+.carousel .carousel-item .carousel-caption p{
 	font: 16px 'Noto Serif', serif;
 	font-weight: 400;
 	margin: 0;
@@ -113,17 +110,14 @@
 	display: inline-block;
 }
 @media only screen and (min-width: 320px){
-	.carousel .carousel-item .carousel-caption p,
-	.image-caption p{
+	.carousel .carousel-item .carousel-caption p{
 		line-height: inherit;
 	}
 }
-.carousel .carousel-item .carousel-caption p a,
-.image-caption p a{
+.carousel .carousel-item .carousel-caption p a{
 	font-size: .9em;
 }
-.carousel .carousel-item .carousel-caption a,
-.image-caption a{
+.carousel .carousel-item .carousel-caption a{
 	text-decoration: underline;
 	color: #fff;
 	background-color: rgba(0, 0, 0, 0.65);
@@ -136,28 +130,15 @@
 	display: inline-block;
 }
 .carousel .carousel-item .carousel-caption a:hover,
-.carousel .carousel-item .carousel-caption a:focus,
-.image-caption a:hover,
-.image-caption a:focus{
+.carousel .carousel-item .carousel-caption a:focus{
 	background-color: #0645AD;
 	margin: 0;
 }
-.carousel .carousel-item .carousel-caption a:focus,
-.image-caption a:focus{
+.carousel .carousel-item .carousel-caption a:focus{
 	border-color: #0645AD;
 	box-shadow: inset 0px 0px 0px 2px #fff;
 	-webkit-box-shadow: inset 0px 0px 0px 2px #fff;
     -moz-box-shadow: inset 0px 0px 0px 2px #fff;
-}
-/* Image caption */
-.image-wrapper{
-	margin: 0 auto;
-	position: relative;
-}
-@media only screen and (min-width: 768px){
-	.image-wrapper{
-		width: 90%;
-	}
 }
 /* Shared CSS for Pause, Next and Previous Slide Controls */
 .carousel .controls button{
