css standardize colors

--- a/css/carousel.css
+++ b/css/carousel.css
@@ -28,7 +28,7 @@
 }
 /* Carousel images */
 .carousel .carousel-item .carousel-image{
-	background: #EBEBEB;
+	background: #e6e6e6;
 }
 .carousel .carousel-item .carousel-image img{
 	width: 100% !important;
