--- a/css/youtube.css
+++ b/css/youtube.css
@@ -18,7 +18,7 @@
 	}
 }
 .youtube{
-	background: #EBEBEB;
+	background: #e6e6e6;
 	cursor: pointer;
 	outline: 3px transparent solid;
 	padding-top: 56.25%;
