--- a/css/style.css
+++ b/css/style.css
@@ -37,9 +37,9 @@ Black-Gray: rgba(0, 0, 0, 0.65);
 White: #fff;
 Black: #261418;
 Dark Blue: #395376;
-Gray: #EBEBEB;
-Darker Gray: #858585;
-Rusty Gray: #464642; (footer only)
+Dark Gray: #505050; (footer only)
+Mid Gray: #949494;
+Light Gray: #e6e6e6;
 
 Green: #76B277;
 Red: #E9513A;
@@ -165,7 +165,7 @@ footer{
 	text-align: center;
 	line-height: 1.875em;
 	color: #fff;
-	background: #464642;
+	background: #505050;
 	margin: .75em auto 0;
 	padding: .25em 1em 1em 1em;
 }
@@ -246,7 +246,7 @@ a:visited{
 }
 a:hover,
 a:focus{
-	color: #EBEBEB;
+	color: #e6e6e6;
 	background-color: #395376;
 	transition: 0.2s;
 }
@@ -257,7 +257,7 @@ footer a:visited{
 footer a:hover,
 footer a:focus{
 	color: #261418;
-	background-color: #EBEBEB;
+	background-color: #e6e6e6;
 	transition: 0.2s;
 }
 [id]:target{
@@ -523,7 +523,7 @@ nav#nav1 h1{
 }
 nav#nav1 a:hover h1,
 nav#nav1 a:focus-within h1{
-	background: #EBEBEB;
+	background: #e6e6e6;
 	border: 2px solid rgba(0, 0, 0, 0.65);
 	border-radius: 5px;
 	-webkit-border-radius: 5px;
@@ -651,7 +651,7 @@ nav#nav2{
 	}
 }
 nav#nav2 #overlay-menu{
-	background-color: #EBEBEB;
+	background-color: #e6e6e6;
 	transition: background-color 0.01s;
 	width: 0;
 	height: 100%;
@@ -693,7 +693,7 @@ nav#nav2 #overlay-menu ul{
 	}
 }
 nav#nav2 #overlay-menu ul{
-	background: #EBEBEB;
+	background: #e6e6e6;
 }
 nav#nav2 #overlay-menu ul li{
 	border-bottom: 1px solid #fff;
@@ -769,7 +769,7 @@ nav#nav2 #overlay-menu li button.close:focus i{
 	font-size: .8em;
 	font-family: Arial, Geneva, Tahoma, sans-serif;
 	color: #395376;
-	background: #EBEBEB;
+	background: #e6e6e6;
 	border-bottom-right-radius: 8px;
 	-webkit-border-bottom-right-radius: 8px;
 	-moz-border-bottom-right-radius: 8px;
