--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,9 @@
-
+/* #395376
+#536883
+#717e90
+#92969c
+#537639
+#765c39 */
 
 /* This CSS file has been developed from the CSS file for Fieldwork of Empire (https://awisnicki.github.io/fieldwork_of_empire/). The CSS code in the latter is released under a Creative Commons Attribution-NonCommercial 4.0 International (CC BY-NC 4.0) license (https://creativecommons.org/licenses/by-nc/4.0/). Please feel free to reuse the code in the file, just be sure to attribute it properly and publicly on your site. */
 
