--- a/css/content.css
+++ b/css/content.css
@@ -6,13 +6,13 @@
 */
 /* ----------------------- */
 .zoomcasts.content header{
-	background: #949494;
+	background: #CF795C;
 }
 .zoomcasts.content .youtube .play-button{
-	background-color: #949494;
+	background-color: #CF795C;
 }
 .lesson-plans.content header{
-	background: #949494;
+	background: #76776f;
 }
 /* ----------------------- */
 .content header{
